force-app/main/default/objects/tb_GoodsInProcessDetail__c/tb_GoodsInProcessDetail__c.object-meta.xml
<CustomObject>
    <label>Goods in Process details</label>
    <nameField>
        <displayFormat>GIPD-{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Goods in Process details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>