force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_Amount__c.field-meta.xml
<CustomField>
    <fullName>tb_Amount__c</fullName>
    <formula>tb_UnitPrice__c * tb_Quantity__c</formula>
    <inlineHelpText>UnitPrice * Quantity</inlineHelpText>
    <label>Total amount (no tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>