force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_AmountWithTax__c.field-meta.xml
<CustomField>
    <fullName>tb_AmountWithTax__c</fullName>
    <formula>tb_Amount__c + tb_Tax__c</formula>
    <inlineHelpText>Amount + Tax</inlineHelpText>
    <label>Total amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>