force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_goodsInProcess__c.field-meta.xml
<CustomField>
    <fullName>tb_goodsInProcess__c</fullName>
    <label>GoodsInProcess</label>
    <referenceTo>tb_GoodsInProcess__c</referenceTo>
    <relationshipLabel>GoodsInProcess details</relationshipLabel>
    <relationshipName>tb_goodsInProcess</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>