force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_Quantity__c.field-meta.xml
<CustomField>
    <fullName>tb_Quantity__c</fullName>
    <label>quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>