force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_Tax__c.field-meta.xml
<CustomField>
    <fullName>tb_Tax__c</fullName>
    <formula>tb_Amount__c * tb_TaxRate__c</formula>
    <inlineHelpText>Amount (no tax) * tax rate</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>