force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_TaxRate__c.field-meta.xml
<CustomField>
    <fullName>tb_TaxRate__c</fullName>
    <label>Tax rate(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>