force-app/main/default/objects/tb_GoodsInProcessDetail__c/fields/tb_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>tb_UnitPrice__c</fullName>
    <label>Unit price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>